--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -212,6 +212,7 @@ footer .company {
   }
 
   footer .container {
+    box-sizing: border-box;
     flex-direction: row;
     justify-content: flex-start;
   }
